# stampfly_ecosystem

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  install.bat  install.sh  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  setup_env.bat
.claude/: session_notes.md
.claude/skills/commit/: commit.md
.claude/skills/post-progress/: SKILL.md  post-progress.md
.claude/skills/post-progress/scripts/: generate_post.py  post_to_x.py
.claude/skills/show-plan/: show-plan.md
.mkdocs/: mkdocs.yml
analysis/datasets/education/: altitude_step.csv  hover_30s.csv  rate_step_response.csv  square_path.csv  static_noise_60s.csv
analysis/datasets/sysid/: motor_steady_state.csv
analysis/notebooks/education/: 01_hello_stampfly.ipynb  02_autonomous_flight.ipynb  03_feedback_basics.ipynb  04_pid_theory.ipynb  05_rate_control_tuning.ipynb  09_cascade_attitude.ipynb  10_altitude_control.ipynb  11_position_control.ipynb  12_waypoint_mission.ipynb  13_custom_controller.ipynb  14_project_template.ipynb  15_analysis_toolkit.ipynb
docs/: COMMIT_GUIDELINES.md  DEBUG_ROS2_UDP_CONTROL.md  DOCUMENT_INDEX.md  README.md  getting-started.md  index.md  overview.md  safety_guide.md  slides.md  tello_api_reference.md  wifi-sta-setup.md
docs/architecture/: control-system.md  coordinate-systems.md  stampfly-parameters.md  tdma-usage.md
docs/bonus/claude_code_workflow/: claude_code_workflow.tex
docs/commands/: README.md  sf-competition.md  sf-docs.md  sf-doctor.md  sf-eskf.md  sf-flight.md  sf-lesson.md  sf-query.md  sf-rc.md  sf-sysid.md  sf-tune.md
docs/education/: assessment_rubric.md  competition_rules.md  glossary.md  safety_guide.md  setup_guide.md  syllabus.md  troubleshooting.md  workshop_guide.md  workshop_schedule.md
docs/education/workshop/: competition_rules.md  workshop_guide.md  workshop_schedule.md
docs/education/workshop/slides/: .gitignore  Makefile  README.md
docs/education/workshop/survey/: create_survey.gs  workshop_survey.md
docs/plans/: CLI_REFACTOR_PLAN.md  SERIAL_CLI_REBUILD_PLAN.md  TELLO_COMPAT_PLAN.md  WIFI_COMM_PLAN.md  WORKSHOP_SLIDES_RESTRUCTURE_PLAN.md  hardware-test.md  installer-architecture.md  vehicle-firmware.md  wifi_command_implementation_plan.md
docs/setup/: README.md  linux.md  macos.md  wifi-sta.md  windows.md
docs/stylesheets/: extra.css
docs/telemetry/: UDP_TELEMETRY_DESIGN.md
docs/tutorials/: flight_log_visualization.md
docs/university/: syllabus.md
docs/workshop/: workshop_guide.md
docs/workshop/slides/: .gitignore  Makefile
docs/workshop/slides/beamer/: stampfly_slides.sty
docs/workshop/slides/diagrams/: espnow_dataflow.drawio  led_state_machine.drawio
docs/workshop/slides/pptx/: generate_slides.py
docs/workshop/slides/tikz/: bode_dead_time.tex  (+14 more)
docs/workshop/survey/: create_survey.gs
examples/education/cascade_sim/: cascade_demo.py
examples/education/custom_pid/: external_pid.py
examples/education/hello_flight/: fly_and_move.py  hello_stampfly.py
examples/education/pid_1d/: pid_first_order.py
examples/education/rate_step_test/: analyze_step.py
examples/education/square_path/: square_path.py
examples/education/waypoint_mission/: waypoint_flight.py
firmware/common/: README.md
firmware/controller/: README.md  TDMA_USAGE.md
firmware/controller/main/: main.cpp
firmware/my_drone/main/: main.cpp
firmware/vehicle/: README.md
firmware/vehicle/components/sf_svc_console/: CMakeLists.txt  console.cpp
firmware/vehicle/components/sf_svc_console/commands/: cmd_comm.cpp  cmd_flight.cpp  cmd_query.cpp  cmd_sensor.cpp  cmd_system.cpp  cmd_wifi_bench.cpp
firmware/vehicle/components/sf_svc_flight_command/: CMakeLists.txt  command_queue.cpp  flight_command.cpp
firmware/vehicle/components/sf_svc_flight_command/include/: command_queue.hpp  flight_command.hpp
firmware/vehicle/main/: CMakeLists.txt  altitude_controller.hpp  config.hpp  globals.cpp  globals.hpp  init.cpp  init.hpp  landing_handler.hpp  main.cpp  position_controller.hpp  ring_buffer.hpp  stationary_detector.hpp
firmware/vehicle/main/tasks/: baro_task.cpp  cli_task.cpp  control_task.cpp  imu_task.cpp  led_task.cpp  mag_task.cpp  optflow_task.cpp  power_task.cpp  telemetry_task.cpp  tof_task.cpp
firmware/vehicle/tests/eskf_debug/: CMakeLists.txt  eskf_test.cpp  eskf_v2_test.cpp
firmware/workshop/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/workshop/main/: CMakeLists.txt  user_code.cpp  workshop_api.cpp  workshop_api.hpp  workshop_globals.cpp  workshop_globals.hpp  workshop_main.cpp  workshop_task.cpp
lib/sfcli/: cli.py
lib/sfcli/commands/: __init__.py  build.py  competition.py  docs.py  doctor.py  eskf.py  flash.py  flight.py  lesson.py  log.py  monitor.py  query.py  rc.py  sim.py  tune.py
lib/sfcli/utils/: espidf.py  paths.py
lib/stampfly/: __init__.py  exceptions.py  stampfly.py
lib/stampfly_edu/: __init__.py  connect.py  generate_samples.py  log_utils.py  plotting.py
lib/stampfly_edu/sim/: __init__.py  cascade.py  plants.py  simulate.py
lib/stampfly_edu/widgets/: __init__.py  pid_tuner.py
protocol/: README.md
ros/src/stampfly_bridge/: setup.cfg
scripts/: eskf_bias_sweep.py  eskf_param_sweep.py  installer.py
simulator/: README.md
simulator/vpython/core/: dynamics.py  motors.py  physics.py
simulator/vpython/interfaces/: joystick.py
simulator/vpython/scripts/: run_sim.py  test_vpython_perf.py
simulator/vpython/visualization/: TODO_camera_yaw.md  vpython_backend.py
tools/: stampfly_cli.py
tools/common/: config_parser.py
tools/eskf_sim/: __init__.py  eskf.py  loader.py  metrics.py  optimizer.py  visualizer.py
tools/eskf_sim/tests/: __init__.py  test_eskf.py  test_optimizer.py
tools/log_analyzer/: README.md  udp_capture.py  visualize_extended.py  visualize_interactive.py  visualize_jsonl.py  wifi_capture.py
tools/sim/: __init__.py  closed_loop.py  drone_plant.py  pid.py
tools/sysid/: __init__.py  plant_fit.py  steady_state.py  visualizer.py
tools/tuning/: __init__.py  dashboard.py  orchestrator.py  sweep.py
tools/udev/: 99-stampfly.rules
(+187 files in other folders)
