idf_component_register(
    SRCS
        "main.cpp"
        "globals.cpp"
        "init.cpp"
        "tasks/imu_task.cpp"
        "tasks/control_task.cpp"
        "tasks/optflow_task.cpp"
        "tasks/mag_task.cpp"
        "tasks/baro_task.cpp"
        "tasks/tof_task.cpp"
        "tasks/power_task.cpp"
        "tasks/led_task.cpp"
        "tasks/button_task.cpp"
        "tasks/comm_task.cpp"
        "tasks/cli_task.cpp"
        "tasks/telemetry_task.cpp"
    INCLUDE_DIRS "." "tasks"
    REQUIRES
        sf_hal_bmi270
        sf_hal_vl53l3cx
        sf_hal_pmw3901
        sf_hal_bmm150
        sf_hal_bmp280
        sf_hal_power
        sf_hal_motor
        sf_hal_led
        sf_hal_buzzer
        sf_hal_button
        sf_algo_filter
        sf_algo_eskf
        sf_algo_fusion
        sf_algo_pid
        sf_algo_control
        sf_svc_health
        sf_svc_state
        sf_svc_comm
        sf_svc_cli
        sf_svc_telemetry
        sf_svc_wifi_cli
        sf_svc_led
)
